fix: remove hero bottom padding on mobile so logos sit flush

--- a/web/assets/scss/components/_hero.scss
+++ b/web/assets/scss/components/_hero.scss
@@ -11,7 +11,7 @@
 
 	@include mobile {
 		grid-template-columns: 1fr;
-		padding: 3rem 1rem 2rem;
+		padding: 3rem 1rem 0;
 		gap: 2rem;
 	}
 
